# weChat-

./: readme.md
client/: CMakeLists.txt  applyfriend.cpp  applyfriend.h  applyfriend.ui  bubble.cpp  bubble.h  chatcontentmsg.cpp  chatcontentmsg.h  chatcontentmsg.ui  chatmessageitembase.cpp  chatmessageitembase.h  chatwidget.cpp  chatwidget.h  chatwidget.ui  customerpushbutton.cpp  customerpushbutton.h  customerscrollwidget.cpp  customerscrollwidget.h  frienditembase.cpp  frienditembase.h  frienditembase.ui  friendlabel.cpp  friendlabel.h  friendlabel.ui  global.cpp  global.h  httpaccessmanager.cpp  httpaccessmanager.h  imagecropperlabel.cpp  main.cpp  messageitembase.cpp  messageitembase.h  messageitembase.ui  radiobutton.cpp  radiobutton.h  register.cpp  register.h  register.ui  res.qrc  searchwid.cpp  (+16 more)
client/style/: applyfriendwid.qss  chatcontentwid.qss  chatwidget.qss  loginwid.qss  registerwid.qss  searchwid.qss
server/: CMakeLists.txt  config.ini
server/src/: CMakeLists.txt
server/src/ChatServer/: CMakeLists.txt  ChatSession.cpp  ChatSession.h  LogicSystem.cpp  LogicSystem.h  TcpServer.cpp  TcpServer.h  main.cpp
server/src/GateWay/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  LogicSystem.cpp  LogicSystem.h  main.cpp
server/src/StatusServer/: CMakeLists.txt  StatusServer.cpp  StatusServer.h  main.cpp
server/src/common/: CMakeLists.txt  Config.cpp  Config.h  IoContextPool.cpp  IoContextPool.h  Logger.h  MysqlConnectPool.cpp  MysqlConnectPool.h  MysqlDao.cpp  MysqlDao.h  NetWorkBuffer.cpp  NetWorkBuffer.h  RedisConnPool.cpp  RedisConnPool.h  Singleton.h  StatusServerClient.cpp  StatusServerClient.h  global.h  noncopyable.h
server/src/grpc/: CMakeLists.txt  Server.grpc.pb.cc  Server.grpc.pb.h  Server.pb.cc  Server.pb.h  Server.proto
